<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroActivity">

    <EditText
        android:id="@+id/cadastro_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        />
    <TextView
        android:id="@+id/erro_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/erro_cadastro"
        />

    <EditText
        android:id="@+id/cadastro_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/prompt_senha"
        />

    <EditText
        android:id="@+id/cadastro_confirma_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/prompt_confirma_senha"
        />

    <TextView
        android:id="@+id/erro_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/erro_cadastro"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cadastrar"
        android:onClick="cadastrarOnClick"
        />

</LinearLayout>